2006-04-24  Ankit Jain  <jankit@novell.com>

	* Driver.cs (DriverMain.Run): Update use of CodeGen.ctor .

2006-02-20  Ankit Jain  <jankit@novell.com>

	* Report.cs (Report): Make all methods,fields static.
	(Report.Error): Update to throw ILAsmException.
	(ILAsmException): New.
	(InternalErrorException): New. Derive from ILAsmException.
	* Driver.cs (Driver.Run): Catch ILAsmException and PEFileException and
	print error messages instead of dumping the stack trace, and delete the
	output file if CodeGen.Write() fails.
	Move the check for entrypoint from CodeGen.Write to here.

2006-01-19  Ankit Jain  <jankit@novell.com>

	* ilasm.exe.sources: Add Module.cs to the build.

2006-01-13  Ankit Jain  <jankit@novell.com>

	* ilasm.exe.sources: Replace IMethodRef.cs with BaseMethodRef.cs

2006-01-09  Ankit Jain  <jankit@novell.com>

        * ilasm.exe.sources: Replace GenericTypeRef.cs with GenericParamRef.cs

2006-01-07  Ankit Jain  <jankit@novell.com>

	* ilasm.exe.sources: Add GenericParameters.cs to the build.

2006-01-06  Ankit Jain  <jankit@novell.com>

	* ilasm.exe.sources: Remove ExternTypeRefInst from build.

2005-12-21  Ankit Jain  <jankit@novell.com>

	* ilasm.exe.sources: Add GenericArguments.cs to the build.

2005-08-26  Kornél Pál  <kornelpal@hotmail.com>

	* AssemblyInfo.cs: Using Consts.MonoVersion instead of MonoVersion.cs.
	* ilasm.exe.sources: Using Consts.MonoVersion instead of MonoVersion.cs.

2005-08-05  Ankit Jain  <jankit@novell.com>

	* ilasm.exe.sources: Add DeclSecurity.cs to the build.

2005-05-12  Ankit Jain  <ankit@corewars.org>

	* Makefile (LOCAL_MCS_FLAGS): Use the in-tree PEAPI.dll as its public
	interface has changed a bit, so avoid clash with older installed
	dll.

2005-04-21  Raja R Harinath  <rharinath@novell.com>

	* Makefile (PROGRAM): Make profile-specific.

2004-12-08  Sebastien Pouliot  <sebastien@ximian.com>

	* Driver.cs: Added support for /key option to strongname assemblies
	produced by ilasm. Fix bug #69721.